--- a/views/home.ejs
+++ b/views/home.ejs
@@ -215,7 +215,7 @@
                     <p>
                         <%= element.content %>
                     </p>
-                    <time datetime="2025-05-01">May 1, 2025</time>
+                    <time datetime="2025-05-01"><%= element.date %></time>
                 </div>
                 <% }); %>
 
